// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`svelte/DefaultField > renders correctly - binary field 1`] = `
<pre>
    
  {
  "path": "root.0.test",
  "type": "binary",
  "status": "initial",
  "error": null,
  "isActive": false,
  "activeStep": "root.0",
  "isRequired": true,
  "value": "&lt;Binary&gt;",
  "Field": "&lt;Component&gt;",
  "engine": "&lt;Engine&gt;",
  "setActiveStep": "&lt;Function&gt;",
  "useSubscription": "&lt;Function&gt;"
}
  

</pre>
`;

exports[`svelte/DefaultField > renders correctly - non-binary field 1`] = `
<pre>
    
  {
  "path": "root.0.test",
  "type": "string",
  "status": "initial",
  "error": null,
  "isActive": false,
  "activeStep": "root.0",
  "isRequired": true,
  "value": null,
  "Field": "&lt;Component&gt;",
  "engine": "&lt;Engine&gt;",
  "setActiveStep": "&lt;Function&gt;",
  "useSubscription": "&lt;Function&gt;"
}
  

</pre>
`;
